test/domains/unsafeAssign/HaltBadArrayIndex.good
HaltBadArrayIndex.chpl:9: error: halt reached - Array index out of bounds: 2
